@@ -10,6 +10,7 @@ extern void Init_gobject_gvalue();
 extern void Init_gobject_gsignal();
 extern void Init_gobject_gparam();
 extern void Init_gobject_gparamspecs();
+extern void Init_gobject_gtypeplugin();
 extern void Init_gobject_gtypemodule();
 extern void Init_gobject_gboxed();
 extern void Init_gobject_genums();
